# MaBar

./: .coderabbit.yaml  .env.example  .gitignore  AI_ARCHITECTURE.md  AI_CHAT_IMPROVEMENTS.md  AI_COMPREHENSIVE_TEST_SCENARIOS.md  AI_FLOW_TESTING_GUIDE.md  AI_FLOW_TEST_CASES.md  AI_MULTI_CONVERSATION_ARCHITECTURE.md  AI_PRESENTER_IMPLEMENTATION_SUMMARY.md  AI_QUICK_REFERENCE.md  AI_SIMPLE_FLOW.md  AI_SYSTEM.md  AI_TEST_SCENARIOS.md  AI_TEST_SCENARIOS_COMPLETE.md  COMPLETE_AI_TEST_CASES.md  CONFIGURATION_GUIDE.md  DATABASE_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_SETUP.md  README.md  REAL_AI_TEST_SCENARIOS.md  SECURITY.md  database-integration-status.md  eslint.config.js  package-lock.json  package.json  sonar-project.properties  test-ai-flow.html  test-ai-logic.js  test-ai-presenter.js  test-ai-updated.html  test-auth-debug.html  test-fixes.html  test-greeting.js
.taskmaster/: config.json  state.json
ai-services/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  test-package.js  tsconfig.json
backend/: .prettierignore  .prettierrc.js  eslint.config.js  package-lock.json  package.json  server.js
backend-rust/: Cargo.toml  README.md
backend-rust/src/: main.rs
backend-rust/src/config/: database.rs  environment.rs  mod.rs
backend-rust/src/controllers/: admin.rs  auth.rs  mod.rs  profile.rs  venues.rs
backend-rust/src/middleware/: auth.rs  mod.rs  security.rs  simple_auth.rs
backend-rust/src/routes/: admin.rs  auth.rs  profile.rs  venues.rs
backend-rust/src/security/: password.rs  validation.rs
backend-rust/src/services/: mod.rs
backend-rust/src/utils/: mod.rs  seed.rs  test_tokens.rs
cloud/: README.md  aiService.js  main-v2.js  main.js  package-lock.json  package.json  smartMatchmaking.js
docs/: AI_CHAT_ARCHITECTURE.md  AI_CHAT_FIX_SUMMARY.md  AI_CHAT_TEST_SCENARIOS.md  AI_DUAL_ASSISTANT_ARCHITECTURE.md  AI_LOGIC_DECISION_TREE.md  AI_MATCHMAKING_IMPLEMENTATION.md  AI_PRESENTER_ASSISTANT.md  AI_TESTING_GUIDE.md  BOOKING_SYSTEM_ANALYSIS.md  CLEANUP_SUMMARY.md  DASHBOARD_DEMO_GUIDE.md  DATABASE_SETUP.md  SECURITY.md  SMART_PRESENTER_GUIDE.md  STEP1_AI_FLOW_GUIDE.md
frontend/: package-lock.json  package.json  vite.config.js
mabar-frontend/: .gitignore  README.md  index.html  modal-test.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: add-test-venues.js  debug-venue-data.js  generate-secrets.js  generate-secure-secrets.js  generate-venue-dashboard-data.js  security-audit.js  seed-comprehensive-test-data.js  seedDatabaseForAITesting.js  seedMinimalTestData.js  seedTestData.js  setup-back4app-schema.js  setup-db.js  (+7 more)
(+201 files in other folders)
