[package]
name = "mabar-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "2.8"
bson = { version = "2.8", features = ["chrono-0_4"] }

# Authentication & Security
jsonwebtoken = "9.2"
oauth2 = "4.4"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment & Configuration
dotenv = "0.15"
config = "0.14"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for OAuth)
reqwest = { version = "0.11", features = ["json"] }

# Session management
actix-session = { version = "0.9", features = ["cookie-session"] }

# Security middleware
actix-web-httpauth = "0.8"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
urlencoding = "2.1"

# File upload handling
actix-multipart = "0.6"

[dev-dependencies]
actix-rt = "2.9"